source/blender/gpu/intern/gpu_codegen.cc
@@ -786,6 +786,8 @@ GPUPass *GPU_generate_pass(GPUMaterial *material,
     pass->shader = nullptr;
     pass->refcount = 1;
     pass->create_info = codegen.create_info;
+    /* Ensure the CreateInfo is finalized in the main thread. */
+    pass->create_info->finalize();
     pass->engine = engine;
     pass->hash = codegen.hash_get();
     pass->compiled = false;
