source/blender/gpu/intern/gpu_shader_create_info.cc
@@ -11,6 +11,7 @@
 #include "BLI_map.hh"
 #include "BLI_set.hh"
 #include "BLI_string_ref.hh"
+#include "BLI_threads.h"
 
 #include "BKE_global.hh"
 
@@ -99,6 +100,8 @@ void ShaderCreateInfo::finalize()
     return;
   }
   finalized_ = true;
+
+  BLI_assert(BLI_thread_is_main());
 
   Set<StringRefNull> deps_merged;
 
